Use TNT boat's explode() method.